# fastapi_speckit

./: .env.example  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/agents/: speckit.constitution.agent.md
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
migrations/: env.py
migrations/versions/: 001_initial_reactions.py  002_add_comments.py
specs/001-like-dislike-comments-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-like-dislike-comments-api/checklists/: requirements.md
specs/001-like-dislike-comments-api/contracts/: openapi.yaml
src/: main.py
src/api/routes/: comments.py  reactions.py
src/core/: config.py  errors.py  rate_limit.py
src/db/: base.py  session.py
src/models/: comment.py  reaction.py
src/schemas/: comment.py  reaction.py
src/services/: comment_service.py  reaction_service.py
tests/: conftest.py
tests/contract/: test_comments_contract.py  test_reactions_contract.py
tests/integration/: test_comments_integration.py  test_load.py  test_reactions_integration.py
tests/unit/: test_comment_service.py  test_rate_limit.py  test_reaction_service.py
